syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.uidmanagement";
option java_outer_classname = "UidManagementProto";
option objc_class_prefix = "UIDM";

package uidmanagement;

service UidManagement {
  rpc GetUid(IpAddress) returns (Uid) {}

  rpc TransferCompleted(Id) returns (Status) {}

  rpc IsImageExist(Id) returns (Status) {}
}

message IpAddress {
  string clientIp = 1;
}

message Uid {
  string uid = 1;
}

message Id {
  string id = 1;
}

message Status {
  string status = 1;
}
